[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blossom-sdk"
version = "1.0.0"
description = "Controlling the Interaction Lab's implementation of the Blossom robot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Emily Weiss", email = "emilymwe@usc.edu"},
    {name="Mark Weiss", email="mwweiss_68106@icloud.com"},
]

dependencies = [
    "dynamixel-sdk",
]

[tool.setuptools.packages.find]
where = ["."]
